Make sure tab content doesn't leak behind ngdialog-footer

--- a/src/app/systelab-components/styles/default-theme/sass/_tabs.scss
+++ b/src/app/systelab-components/styles/default-theme/sass/_tabs.scss
@@ -17,7 +17,10 @@ $tab-vertical-padding: ceil(6px - $height-diff / 2);
 /* $tab-space: used to define the top margin and the gutter between elements */
 $tab-space: 5px;
 
+$tabs-height: 37px;
+
 .nav {
+  height: $tabs-height;
   padding-left: 25px;
   white-space: nowrap;
   overflow: visible;
@@ -62,9 +65,13 @@ $tab-space: 5px;
   }
 }
 
-.tab-content > .active {
-  display: flex;
-  overflow: auto;
+.tab-content {
+  height: calc(100% - #{$tabs-height});
+
+  > .active {
+    display: flex;
+    overflow: auto;
+  }
 }
 
 .tab-pane {
